Closed Bug 927810 Opened 12 years ago Closed 12 years ago

Fix ipc/chromium on OpenBSD after struct kinfo_proc changes

Categories

(Core :: IPC, defect)

x86
OpenBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: gaston, Assigned: gaston)

Details

Attachments

(1 file)

builds fail on openbsd since 22/09 after a struct kinfo_proc change related to p_psflags, see http://marc.info/?l=openbsd-cvs&m=137987093601511&w=2 Upcoming patch fixes the issue and is backwards-compatible.
backwards-compatible as 'trunk still builds with this patch on a machine without the changes'. Forgot to mention the patch was in our portstree since then : http://www.openbsd.org/cgi-bin/cvsweb/ports/www/mozilla-firefox/patches/patch-ipc_chromium_src_base_debug_util_posix_cc?rev=1.3;content-type=text%2Fplain
Assignee: nobody → landry
Attachment #818394 - Flags: review?(mh+mozilla)
Attachment #818394 - Flags: review?(mh+mozilla) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: