Bug 927810: Fix ipc/chromium after p_psflags changes in struct kinfo_proc on OpenBSD. r=glandium